tdf#151456: AnimatedImages in Basic Dialog : StepTime is ignored

2 problems here
1) Regression on test of "pThrobber" since 51e97b2ffd8f0ae0591d1880d621cba4596583b7
toolkit: first cut at switching to VclPtr.

2) as the author of the bug "Jurassik Pork" indicated,
"mnStepTime" wasn't used after having been used in ctr of Throbber
Thank you to him for the suggestion!

Change-Id: I0d1a53738035c3e822ea84d5972363dd9d0b5d8d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160771
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit d2367a971f624cd1d566410fbea40809713fdf53)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160798